# razer-da-editor

./: .gitignore  CMakeLists.txt  README.md
include/: gui.h  razer.h  usb.h  usbutil.h
src/: gui.cpp  main.cpp  razer.c  usb.c  usbutil.c
src/cjson/: cJSON.c
